Bug 501159 - Lock Key Status indicator in system tray no longer shows the "input-combo-on" icon when appropriate
Summary: Lock Key Status indicator in system tray no longer shows the "input-combo-on"...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Keyboard Indicator (other bugs)
Version First Reported In: 6.3.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 500827 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-06 20:08 UTC by Stuart K. Smith
Modified: 2025-03-10 14:09 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart K. Smith 2025-03-06 20:08:53 UTC
SUMMARY
Beginning with Plasma 6.3, the system tray "Lock Key Status" no longer indicates correctly when both Num Lock and Caps Lock when both are active.

STEPS TO REPRODUCE
1. Press "Num Lock" and observe the Lock Key Status indicator appear in the system tray with "1" displayed.
2. Press "Caps Lock" and observe the Lock Key Status indicator change to "A" (instead of "A1" with 1 in superscript).

OBSERVED RESULT
The "input-combo-on" icon is not displayed in Lock Key Status. Instead, "input-caps-on" is displayed when both Num and Caps Lock are selected.

EXPECTED RESULT
The "input-combo-on" icon is displayed in Lock Key Status when both Num and Caps Lock are selected.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0 
Qt Version: 6.8.2

ADDITIONAL INFORMATION
This has been observed since the first upgrade to 6.3 from 6.2. 6.2 and earlier behave as expected.
Comment 1 Bug Janitor Service 2025-03-07 16:17:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7286
Comment 2 Nate Graham 2025-03-07 18:22:50 UTC
*** Bug 500827 has been marked as a duplicate of this bug. ***
Comment 3 Vlad Zahorodnii 2025-03-10 07:08:53 UTC
Git commit f68d21cbc60f693c689d7b7ac212ee793f537c6e by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 10/03/2025 at 06:44.
Pushed by vladz into branch 'master'.

xkb: Fix reporting state for multiple modifiers

We need to check all modifiers and combine the result, not abort after the first active one

M  +36   -18   src/xkb.cpp

https://invent.kde.org/plasma/kwin/-/commit/f68d21cbc60f693c689d7b7ac212ee793f537c6e
Comment 4 Vlad Zahorodnii 2025-03-10 07:52:18 UTC
Git commit 78491e5a3495a2319e47dae5a83c873c79acf8f3 by Vlad Zahorodnii.
Committed on 10/03/2025 at 07:12.
Pushed by vladz into branch 'Plasma/6.3'.

xkb: Fix reporting state for multiple modifiers

We need to check all modifiers and combine the result, not abort after the first active one


(cherry picked from commit f68d21cbc60f693c689d7b7ac212ee793f537c6e)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +36   -18   src/xkb.cpp

https://invent.kde.org/plasma/kwin/-/commit/78491e5a3495a2319e47dae5a83c873c79acf8f3