xkb: Fix reporting state for multiple modifiers

We need to check all modifiers and combine the result, not abort after the first active one

BUG: 501159